# genome

./: .dockerignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  build_example.py  build_mock.py  compose.yaml  nexovia.toml
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: report.template.html
examples/: onepager.md  onepager.nexovia.toml
examples/strategy-doc/: genome.toml  report.html
mock/: report.html
org/: coding-standards.toml  nxs-topology.toml
project/: approvals.toml  components.toml  delivery.toml  deployment.toml  lifecycle.toml  policies.toml  quality.toml  questions.toml
schema/: nexovia-2.toml
site/: CNAME  content.json  index.html  install.ps1  install.sh  site.js  styles.css
src/: cli.rs  facet.rs  lib.rs  main.rs  validate.rs
src/enrich/: llm.rs  mod.rs
src/genome/: io.rs  mod.rs  model.rs
src/ingest/: doc.rs  mod.rs
src/render/: html.rs  mod.rs
tests/: fidelity.rs
