[package]
name = "nexovia"
version = "0.1.0"
edition = "2021"
description = "One file is your project's genome — a config-driven comprehension + approval window."
repository = "https://github.com/nex-ovia/genome"

# Brand is nexovia; the binary is `genome`.
[[bin]]
name = "genome"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
pulldown-cmark = { version = "0.12", default-features = false }

# Optional, off the default path (efficiency policy). enrich = offline embedded
# GGUF inference (llama.cpp), a one-time model fetch (ureq), and in-place TOML
# edits that preserve formatting (toml_edit).
llama-cpp-2 = { version = "0.1", optional = true }
ureq = { version = "2", optional = true }
toml_edit = { version = "0.22", optional = true }

[features]
default = []
enrich = ["dep:llama-cpp-2", "dep:ureq", "dep:toml_edit"]

[profile.release]
opt-level = "z"
lto = true
strip = true
